Fixed issues with tab handling; Introduced setting for wrapping memory

--- a/src/main/resources/css/brainfuck.css
+++ b/src/main/resources/css/brainfuck.css
@@ -1,3 +1,7 @@
+* {
+    -fx-tab-size: 4;
+}
+
 .root {
     -fx-font-family: 'Open Sans';
 }
@@ -713,4 +717,10 @@
     -fx-shape: "M 0,0 H1 L 4,3 7,0 H8 V1 L 5,4 8,7 V8 H7 L 4,5 1,8 H0 V7 L 3,4 0,1 Z";
     -fx-scale-shape: false;
     -fx-effect: dropshadow(two-pass-box , rgba(180, 180, 180, 0.4), 1, 0.0 , 0, 1);
+}
+
+.tab-content {
+    -fx-background-color: #444952;
+    -fx-background-radius: 3px;
+    -fx-padding: 10px;
 }
